<resources>
    <string name="app_name">Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_search_history">Clear Searches</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="label_size">Size</string>
    <string name="label_color">Color</string>
    <string name="label_type">Type</string>
    <string name="label_site">Site Filter</string>
    <string name="label_save">Save</string>

    <string-array name="size_array">
        <item>-- Unset --</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>

    <string-array name="color_array">
        <item>-- Unset --</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
    </string-array>

    <string-array name="type_array">
        <item>-- Unset --</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Line Art</item>
    </string-array>
    <string name="title_activity_image_details">ImageDetailsActivity</string>

</resources>
